--- a/scss/theme/_netmatters.scss
+++ b/scss/theme/_netmatters.scss
@@ -5,6 +5,7 @@ $page-background: #fefefe;
 
 $primary: #333645;
 $primary-contrast: #fff;
+$primary-contrast-hover: #ebebeb;
 $primary-highlight: #484a58;
 $primary-shadow: #262834;
 
