--- a/scss/theme/_netmatters.scss
+++ b/scss/theme/_netmatters.scss
@@ -130,6 +130,7 @@ $blog-para-line-height: 1.375rem;
 $blog-button-font-size: convert.px-to-rem(17px);
 $blog-category-font-size: convert.px-to-rem(12px);
 $blog-category-font-weight: 600;
+$blog-category-tooltip-font-size: convert.px-to-rem(12px);
 $blog-poster-font-size: convert.px-to-rem(14px);
 
 $tooltip-header-font-size: convert.px-to-rem(18px);
