--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -11,4 +11,5 @@
 @forward "margin-x-center";
 @forward "rounded-corners";
 @forward "short-horizontal-line";
+@forward "tooltip";
 @forward "wrapped-flex";
