--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -1,5 +1,5 @@
 @forward "add-if-possible";
-@forward "badge-row-colour-on-hover";
+@forward "badge-row";
 @forward "border";
 @forward "breakpoints";
 @forward "button";
