--- a/scss/utility/_badge-row.scss
+++ b/scss/utility/_badge-row.scss
@@ -1,6 +1,6 @@
 @use "breakpoints";
 @use "flex-row-container";
-@use "margin-x-center" as center;
+@use "margin-center" as center;
 @use "convert";
 @use "../theme";
 
