--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -7,8 +7,9 @@
 @forward "convert";
 @forward "flex-center";
 @forward "flex-row-container";
+@forward "grid";
 @forward "hero-image-background";
-@forward "margin-x-center";
+@forward "margin-center";
 @forward "rounded-corners";
 @forward "short-horizontal-line";
 @forward "tooltip";
