--- a/scss/utility/_tooltip.scss
+++ b/scss/utility/_tooltip.scss
@@ -1,5 +1,5 @@
 @use "convert";
-@use "margin-x-center" as center;
+@use "margin-center" as center;
 
 /*
 Example use. Note there can be multiple anchor
