replace display: initial, for IE11 compatibility

--- a/scss/utility/_colour-on-hover.scss
+++ b/scss/utility/_colour-on-hover.scss
@@ -3,12 +3,12 @@
         display: none;
     }
     .bw {
-        display: initial;
+        display: block;
     }
 
     &:hover {
         .colour {
-            display: initial;
+            display: block;
         }
         .bw {
             display: none;
