--- a/scss/layout/_latest-posts.scss
+++ b/scss/layout/_latest-posts.scss
@@ -94,7 +94,7 @@
         }
         @include utility.above-breakpoint("large") {
             &:last-of-type {
-                display: initial;
+                display: block;
             }
         }
     }
