--- a/scss/icons/_insert-icon.scss
+++ b/scss/icons/_insert-icon.scss
@@ -1,8 +1,7 @@
 @use "variables";
 
-// define as placeholder so rules can be reused elsewhere if icons are used
-// in a way other than setting the class name to be the name of an icon.
 @mixin icon($unicode: null) {
+    // the icon font is only defined for normal style, weight, etc.
     font-family: "#{variables.$font-family}" !important;
     font-style: normal;
     font-weight: normal;
@@ -18,6 +17,8 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+// allows insertion of icon based on class name
+// e.g. class="icon-phone" will get the phone icon as a pseudo-element
 @each $icon-name, $unicode in variables.$icon-unicode-by-name {
     .icon-#{$icon-name} {
         &::before {
