--- a/scss/layout/_nav-bar.scss
+++ b/scss/layout/_nav-bar.scss
@@ -53,10 +53,10 @@ nav {
         .#{$service} .category-head::before {
             @include icons.icon(icons.icon-unicode-from-name($icon-name));
             display: block;
-
-            width: 1ch;
-            margin: 0 auto;
             padding-top: 1em;
+
+            font-size: 1.25rem;
+            text-align: center;
 
             color: theme.get-colour-for-service($service);
         }
@@ -77,8 +77,9 @@ nav {
         color: theme.$primary-contrast;
         text-decoration: none;
         text-transform: uppercase;
+        line-height: 1.0;
 
-        margin: utility.px-to-rem(10px) 0 0;
+        margin: 0;
     }
 
     .subcategories {
