--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -9,7 +9,9 @@
 @forward "flex-row-container";
 @forward "grid";
 @forward "hero-image-background";
+@forward "horizontal-shadow-after";
 @forward "margin-center";
+@forward "primary-box-shadow";
 @forward "rounded-corners";
 @forward "short-horizontal-line";
 @forward "tooltip";
