--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -134,7 +134,7 @@ footer {
 
             font-size: utility.px-to-rem(28px);
 
-            background-color: theme.$quarter-opaque;
+            background-color: theme.$transparent-secondary;
             height: utility.px-to-rem(55px);
             margin-top: utility.px-to-rem(30px);
         }
