--- a/scss/theme/_netmatters.scss
+++ b/scss/theme/_netmatters.scss
@@ -22,7 +22,7 @@ $border-radius: convert.px-to-rem(3px);
 $nav-bar-bottom-border: #999aa2;
 
 $transparent-primary: rgba(0, 0, 0, 0.1);
-$quarter-opaque: rgba(0, 0, 0, 0.25);
+$transparent-secondary: rgba(0, 0, 0, 0.25);
 
 $service-colours: (
     "web-design": #926fb1,
