--- a/scss/layout/_latest-posts.scss
+++ b/scss/layout/_latest-posts.scss
@@ -63,7 +63,7 @@
     }
 
     p {
-        color: theme.$faint;
+        color: theme.$secondary-lighter;
         font-size: theme.$blog-para-font-size;
         line-height: theme.$blog-para-line-height;
     }
